configurando application test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=FitPerformSync
+
+spring.profiles.active=test
+
+spring.jpa.open-in-view=false
+
+spring.datasource.url=jdbc:h2:men:fitPerformSyncdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
